<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        >

        <FrameLayout
            android:id="@+id/constraintLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sort"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/by_name_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageView
                android:id="@+id/by_name_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check_sorted_by"
                />

            <TextView
                android:id="@+id/by_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/by_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/by_name_desc_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageView
                android:id="@+id/by_name_desc_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check_sorted_by"
                />

            <TextView
                android:id="@+id/by_name_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/by_name_desc"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/by_value_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageView
                android:id="@+id/by_value_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check_sorted_by"
                />

            <TextView
                android:id="@+id/by_value_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/by_value"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/by_value_desc_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            >

            <ImageView
                android:id="@+id/by_value_desc_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_check_sorted_by"
                />

            <TextView
                android:id="@+id/by_value_desc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/by_value_desc"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

        </LinearLayout>

    </LinearLayout>

</layout>